# S24-ArchitectingLunarBases

./: .gitignore  Lunar Spaceport-1 Digital Engineering Ecosystem - HTML Stakeholder Interface.html  README.md  assembly_builder.html  export_sysml_to_json.py  index.html  lsp1.sysml  lunar_spaceport_plotter.html  lunar_spaceport_results.json  o2tank.json  o2tank.sysml  o2tank_sanity.usda  obsolete_index.html  pincer.ipynb  pyproject.toml  scaffold_web_structure.py  setup.md  sysml_generator.html  unified_mission_workbench for r5.html  usd_writer.py
Discrete Event Simulation/: CommunicationModule.py  HabitationModule.py  ISRUPlant.py  ISRU_DES_Model_V3.py  ImportUtility.py  LandingLaunchZone.py  LoggingManager.py  LunarRover.py  PowerManager.py  README.txt  RoverChargingStation.py  (+4 more)
main/old_USD/: pyproject.toml
main/old_USD/legacy_usd_code/: usd_writer.py
main/old_USD/legacy_usd_code/curation/geoms/curated/: landing_support_rod_rear_left_Geometry_165.usda  support_strut_lower_left_Geometry_149.usda  thrust_frame_support_Geometry_153.usda
main/old_USD/legacy_usd_code/model_copy_do_not_edit/: model.usda
main/old_USD/legacy_usd_code/model_copy_do_not_edit/geometries/: Geometry_146.usd  Geometry_159.usd  Geometry_168.usd
main/old_USD/legacy_usd_code/tutorials/: Properties.ipynb
main/old_USD/models_db/: README.md
main/old_USD/src/lsp_usd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
main/old_USD/src/lsp_usd/config/: naming.py
main/old_USD/src/lsp_usd/usd/: assembly.py
main/old_USD/tester/: habmod.json
main/old_USD/tester/assets/mats/: O2Tank2_mat.usda
(+616 files in other folders)
