[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "S24"
version = "0.1.0"
description = "SysML v2 to USD digital systems pipeline"
requires-python = ">=3.10"
dependencies = [
  "networkx",
  "numpy",
  "matplotlib",
]

[tool.setuptools]
packages = ["S24"]
