[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsp-usd"
version = "0.1.0"
description = "OpenUSD asset and assembly pipeline for LunarSpaceport-1"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
